--- a/WebsiteCaNhan4/trangchu.html
+++ b/WebsiteCaNhan4/trangchu.html
@@ -73,15 +73,25 @@
 							</div>
 							<button type="button" data-toggle="collapse" data-target=".navigation" class="navbar-toggle edugate-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 						</div>
+						 <div class="col-sm-3 col-md-3">
+					        <form class="navbar-form" role="search">
+					        <div class="input-group">
+					            <input type="text" class="form-control" placeholder="Search" name="q">
+					            <div class="input-group-btn">
+					                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+					            </div>
+					        </div>
+					        </form>
+					    </div>
 						<nav class="navigation collapse navbar-collapse pull-right">
 							<ul class="nav-links nav navbar-nav">
 
-								<li class="active"><a href="#" class="main-menu">Trang chủ </a> </li>
+								<li class="active"><a href="trangchu.html" class="main-menu">Trang chủ </a> </li>
 								<li class="dropdown">
 									<a href="#" class="main-menu data-toggle=" dropdown "">Các khóa học <span class="fa fa-angle-down icons-dropdown"></span></a>
 									<ul class="dropdown-menu edugate-dropdown-menu-1">
 										<li>
-											<a href="#" class="link-page">Android</a>
+											<a href="trangdangkykhoahoc.html" class="link-page">Lập trình web</a>
 										</li>
 										<li>
 											<a href=="#" class="link-page">Java</a>
@@ -90,7 +100,7 @@
 											<a href=="#" class="link-page">Java</a>
 										</li>
 										<li>
-											<a href=="#" class="link-page">Lập trình web</a>
+											<a href=="#" class="link-page">Android</a>
 										</li>
 									</ul>
 								</li>
@@ -99,14 +109,7 @@
 
 								<li><button type="button" id="btnd" class="btn" data-toggle="modal" data-target=".loginModal"><u style = "color: blue">Đăng nhập</u></button></li>
 								<li><button type="button" id="btnd" class ="btn" data-toggle="modal" data-target=".registerModal"><u style = "color: blue">Đăng ký</u></button></li>
-								<li class="button-search">
-									<p class="main-menu"><i class="fa fa-search"></i></p>
-								</li>
-								<div class="nav-search  hide">
-									<form><input type="text" placeholder="Tìm kiếm" class="searchbox" />
-										<button type="submit" class="searchbutton fa fa-search"></button>
-									</form>
-								</div>
+								
 							</ul>
 						</nav>
 					</div>
@@ -233,17 +236,17 @@
 								<li class="col-md-3 clear4">
 									<div class="block courseitem">
 										<div class="block_media">
-											<a href="#"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
+											<a href="trangdangkykhoahoc.html"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
 											<div class="avatar-list">
 												<div class="hinhgiangvien"><img src="img/jsp-servlet.jpg" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
 												<div class="tongbaihoc">71 bài học</div>
 												<div class="thoiluongvideo">Video 16 giờ 10 phút</div>
-												<a href="#" class="btn-info xemngaykhoahoc showbuttontrangchu">Xem ngay</a>
+												<a href="trangdangkykhoahoc.html" class="btn-info xemngaykhoahoc showbuttontrangchu">Xem ngay</a>
 											</div>
 										</div>
 
 										<div class="block_content">
-											<h4 class="block_title"><a href="#" title="Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến">Java Web JSP-SERVLET</a></h4>
+											<h4 class="block_title"><a href="trangdangkykhoahoc.html" title="Java Web JSP-SERVLET">Java Web JSP-SERVLET</a></h4>
 
 											<div class="item-instructor">
 												<img src="img/logo.jpg" class="avatar-course " alt="Profile Photo" height="32" width="32">
