--- a/WebsiteCaNhan4/trangdanhsachkhoahoccuatui.html
+++ b/WebsiteCaNhan4/trangdanhsachkhoahoccuatui.html
@@ -86,21 +86,21 @@
 						<nav class="navigation collapse navbar-collapse pull-right">
 							<ul class="nav-links nav navbar-nav">
 								
-								<li class="active"><a href="#" class="main-menu">Trang chủ </a> </li>
+								<li class="active"><a href="trangchu.html" class="main-menu">Trang chủ </a> </li>
 								<li class="dropdown">
 									<a href="#" class="main-menu data-toggle=" dropdown "">Các khóa học <span class="fa fa-angle-down icons-dropdown"></span></a>
 									<ul class="dropdown-menu edugate-dropdown-menu-1">
 										<li>
-											<a href="#" class="link-page">Android</a>
+											<a href="trangdangkykhoahoc.html" class="link-page">Android</a>
 										</li>
 										<li>
-											<a href=="#" class="link-page">Java</a>
+											<a href=="trangdangkykhoahoc.html" class="link-page">Java</a>
 										</li>
 										<li>
-											<a href=="#" class="link-page">Java</a>
+											<a href=="trangdangkykhoahoc.html" class="link-page">Java</a>
 										</li>
 										<li>
-											<a href=="#" class="link-page">Lập trình web</a>
+											<a href=="trangdangkykhoahoc.html" class="link-page">Lập trình web</a>
 										</li>
 									</ul>
 								</li>
@@ -120,7 +120,7 @@
 						            <li class="divider"></li>
 						            <li><a href="#">Trợ giúp <span class="glyphicon glyphicon-flag pull-right"></span></a></li>
 						            <li class="divider"></li>
-						            <li><a href="#">Đăng xuất <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
+						            <li><a href="trangchu.html">Đăng xuất <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
 						          </ul>
 						        </li>
 							</ul>
@@ -146,7 +146,7 @@
 								<li class="col-md-3 clear4">
 									<div class="block courseitem">
 										<div class="block_media">
-											<a href="#"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
+											<a href="trangdangkykhoahoc.html"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
 											<div class="avatar-list">
 												<div class="hinhgiangvien"><img src="img/jsp-servlet.jpg" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
 												<div class="tongbaihoc">71 bài học</div>
@@ -156,7 +156,7 @@
 										</div>
 
 										<div class="block_content">
-											<h4 class="block_title"><a href="#" title="Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến">Java Web JSP-SERVLET</a></h4>
+											<h4 class="block_title"><a href="trangdangkykhoahoc.html" title="Java Web JSP-SERVLET">Java Web JSP-SERVLET</a></h4>
 
 											<div class="item-instructor">
 												<img src="img/logo.jpg" class="avatar-course " alt="Profile Photo" height="32" width="32">
@@ -274,12 +274,12 @@
 									<li class="col-md-3 clear4">
 										<div class="block courseitem">
 											<div class="block_media">
-												<a href="#"><img src="img/Android.jpg" height="150" width="300"></a>
+												<a href="trangchitietbaigiang.html"><img src="img/Android.jpg" height="150" width="300"></a>
 											<div class="avatar-list">
 												<div class="hinhgiangvien"><img src="img/android.jpg" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
 												<div class="tongbaihoc">31 bài học</div>
 												<div class="thoiluongvideo">Video 24 giờ 10 phút</div>
-												<a href="#" class="btn-info xemngaykhoahoc showbuttontrangchu">Xem ngay</a>
+												<a href="trangchitietbaigiang.html" class="btn-info xemngaykhoahoc showbuttontrangchu">Xem ngay</a>
 											</div>
 										</div>
 
@@ -317,12 +317,43 @@
 					</div>
 					<!--End Divide Bodu->
 		
-		<!--End Content-->
+					<!--End Content-->
 					<!--Footer-->
 
 					
 					<div class="footer" class="row">
 						<div class="container">
+
+						 <div id="contact" class="container-fluid bg-grey">
+						  <h2 class="text-center" style="font-size: 50; font-weight: bold; ">LIÊN HỆ</h2>
+						  <br>
+						  <div class="row">
+						    <div class="col-sm-5">
+						      <p>Nhóm 14, Sáng Thứ 3 Môn Lập trình Web </p>
+						      <p><span class="glyphicon glyphicon-map-marker"></span> Võ Văn Ngân, Q.Thủ Đức, TP.HCM</p>
+						      <p><span class="glyphicon glyphicon-phone"></span>0909090909</p>
+						      <p><span class="glyphicon glyphicon-envelope"></span> pilu15051996@gmail.com</p>
+						    </div>
+						    <div class="col-sm-7 slideanim">
+						      <div class="row">
+						        <div class="col-sm-6 form-group">
+						          <input class="form-control" id="name" name="name" placeholder="Tên" type="text" required>
+						        </div>
+						        <div class="col-sm-6 form-group">
+						          <input class="form-control" id="email" name="email" placeholder="Địa chỉ email" type="email" required>
+						        </div>
+						      </div>
+						      <textarea class="form-control" id="comments" name="comments" placeholder="Nội dung" rows="5"></textarea><br>
+						      <div class="row">
+						        <div class="col-sm-12 form-group">
+						          <button class="btn btn-default pull-right" type="submit">Gởi</button>
+						        </div>
+						      </div>
+						    </div>
+						  </div>
+						</div>
+
+						<img id="googleMap" style="height:auto;width:100%;" src = "img/map.PNG" alt = "">
 							<div class="col-md-12 text-center">
 								<img style="width:40px;	height:40px;padding: 5px" src="img/logo.jpg"> &copy 2016 - BẢN QUYỀN THUỘC VỀ NHÓM 14 LTW
 							</div>
