--- a/WebsiteCaNhan4/trangdangkykhoahoc.html
+++ b/WebsiteCaNhan4/trangdangkykhoahoc.html
@@ -60,6 +60,16 @@
 							</div>
 							<button type="button" data-toggle="collapse" data-target=".navigation" class="navbar-toggle edugate-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 						</div>
+						 <div class="col-sm-3 col-md-3">
+					        <form class="navbar-form" role="search">
+					        <div class="input-group">
+					            <input type="text" class="form-control" placeholder="Search" name="q">
+					            <div class="input-group-btn">
+					                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+					            </div>
+					        </div>
+					        </form>
+					    </div>
 						<nav class="navigation collapse navbar-collapse pull-right">
 							<ul class="nav-links nav navbar-nav">
 
@@ -84,16 +94,8 @@
 
 								<li class=""><a href="#" class="main-menu">Liên hệ </a></li>
 
-								<li style="margin-left:5em" class=""><a href="#" class="main-menu"> Đăng Nhập </a></li>
-								<li class=""><a href="#" class="main-menu"> Đăng Ký </a></li>
-								<li class="button-search">
-									<p class="main-menu"><i class="fa fa-search"></i></p>
-								</li>
-								<div class="nav-search  hide">
-									<form><input type="text" placeholder="Tìm kiếm" class="searchbox" />
-										<button type="submit" class="searchbutton fa fa-search"></button>
-									</form>
-								</div>
+								<li><button type="button" id="btnd" class="btn" data-toggle="modal" data-target=".loginModal"><u style = "color: blue">Đăng nhập</u></button></li>
+								<li><button type="button" id="btnd" class ="btn" data-toggle="modal" data-target=".registerModal"><u style = "color: blue">Đăng ký</u></button></li>
 							</ul>
 						</nav>
 					</div>
@@ -338,6 +340,37 @@
 			<!--Footer-->
 			<div class="footer" class="row">
 				<div class="container">
+					<div id="contact" class="container-fluid bg-grey">
+						  <h2 class="text-center" style="font-size: 50; font-weight: bold; ">LIÊN HỆ</h2>
+						  <br>
+						  <div class="row">
+						    <div class="col-sm-5">
+						      <p>Nhóm 14, Sáng Thứ 3 Môn Lập trình Web </p>
+						      <p><span class="glyphicon glyphicon-map-marker"></span> Võ Văn Ngân, Q.Thủ Đức, TP.HCM</p>
+						      <p><span class="glyphicon glyphicon-phone"></span>0909090909</p>
+						      <p><span class="glyphicon glyphicon-envelope"></span> pilu15051996@gmail.com</p>
+						    </div>
+						    <div class="col-sm-7 slideanim">
+						      <div class="row">
+						        <div class="col-sm-6 form-group">
+						          <input class="form-control" id="name" name="name" placeholder="Tên" type="text" required>
+						        </div>
+						        <div class="col-sm-6 form-group">
+						          <input class="form-control" id="email" name="email" placeholder="Địa chỉ email" type="email" required>
+						        </div>
+						      </div>
+						      <textarea class="form-control" id="comments" name="comments" placeholder="Nội dung" rows="5"></textarea><br>
+						      <div class="row">
+						        <div class="col-sm-12 form-group">
+						          <button class="btn btn-default pull-right" type="submit">Gởi</button>
+						        </div>
+						      </div>
+						    </div>
+						  </div>
+						</div>
+
+						<img id="googleMap" style="height:auto;width:100%;" src = "img/map.PNG" alt = "">
+						
 					<div class="col-md-12 text-center">
 						<img style="width:40px;	height:40px;padding: 5px" src="img/logo.jpg"> &copy 2016 - BẢN QUYỀN THUỘC VỀ NHÓM 14 LTW
 					</div>
