--- a/WebsiteCaNhan4/tranglienhe.html
+++ b/WebsiteCaNhan4/tranglienhe.html
@@ -125,8 +125,10 @@
 				<div class="container">
 
 					<img class="img-thumbnail" id="googleMap" style="height:auto;width:100%;" src = "img/map.PNG" alt = "">
+					<br>
+					<br>
 					
-					<h1 class="text-center" style="color: #4169e1; font-weight: bold;">LẬP TRÌNH WEB JSP-SERVLET</h1><br>
+					<h1 class="text-center" style="color: #4169e1; font-weight: bold;">LẬP TRÌNH WEB NHÓM 14</h1><br>
 						<div class="col-xs-12 col-sm-7 col-md-9 col-sm-offset-2 col-md-offset-2">                         
 
                         	<table width="600" border="0" align="center" cellpadding="0" cellspacing="0" id="congviec">
@@ -150,7 +152,11 @@
 							  </tr>
 							  
 							</tbody></table>
-						</div>		
+							<br>
+						<br>
+						<br>	
+						</div>	
+
 
 						<div class="row text-center">
 							<div class="col-sm-3 col-xs-6 first-box">
