--- a/WebsiteCaNhan4/trangthongtincanhan.html
+++ b/WebsiteCaNhan4/trangthongtincanhan.html
@@ -241,6 +241,36 @@
 					
 					<div class="footer" class="row">
 						<div class="container">
+							 <div id="contact" class="container-fluid bg-grey">
+						  <h2 class="text-center" style="font-size: 50; font-weight: bold; ">LIÊN HỆ</h2>
+						  <br>
+						  <div class="row">
+						    <div class="col-sm-5">
+						      <p>Nhóm 14, Sáng Thứ 3 Môn Lập trình Web </p>
+						      <p><span class="glyphicon glyphicon-map-marker"></span> Võ Văn Ngân, Q.Thủ Đức, TP.HCM</p>
+						      <p><span class="glyphicon glyphicon-phone"></span>0909090909</p>
+						      <p><span class="glyphicon glyphicon-envelope"></span> pilu15051996@gmail.com</p>
+						    </div>
+						    <div class="col-sm-7 slideanim">
+						      <div class="row">
+						        <div class="col-sm-6 form-group">
+						          <input class="form-control" id="name" name="name" placeholder="Tên" type="text" required>
+						        </div>
+						        <div class="col-sm-6 form-group">
+						          <input class="form-control" id="email" name="email" placeholder="Địa chỉ email" type="email" required>
+						        </div>
+						      </div>
+						      <textarea class="form-control" id="comments" name="comments" placeholder="Nội dung" rows="5"></textarea><br>
+						      <div class="row">
+						        <div class="col-sm-12 form-group">
+						          <button class="btn btn-default pull-right" type="submit">Gởi</button>
+						        </div>
+						      </div>
+						    </div>
+						  </div>
+						</div>
+
+						<img id="googleMap" style="height:auto;width:100%;" src = "img/map.PNG" alt = "">
 							<div class="col-md-12 text-center">
 								<img style="width:40px;	height:40px;padding: 5px" src="img/logo.jpg"> &copy 2016 - BẢN QUYỀN THUỘC VỀ NHÓM 14 LTW
 							</div>
