update trang danh gia
update trang danh gia

--- a/WebsiteCaNhan4/trangchitietbaigiang.html
+++ b/WebsiteCaNhan4/trangchitietbaigiang.html
@@ -221,7 +221,7 @@
 							<a href="#">JSP Servlet</a>
 						</div>
 						<div class="tab-pane" id="3a">
-						
+
 							<h2 style="color: blue; font-size:25"><strong>Nội dung bài tập</strong></h2>
 							<hr>
 
@@ -353,10 +353,15 @@
 								<br><br><br>
 						</div>
 					</div>
-					
-						<button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#xemdiem">Xem điểm</button>
-						<br>
-						<br>
+					<div class="row pull-left ">
+						<div class="col-md-3">
+						<button type="button" class="btn btn-success" data-toggle="collapse" data-target="#xemdiem">Xem điểm</button>
+						</div>
+						<div class="col-md-3 text-center" style="margin-left: 30px;">						
+						<a  href="trangdanhgia.html" type="button" class="btn btn-danger active" role="button" aria-pressed="true" >Đánh giá</a>
+						</div>
+					</div>
+					<br><br>
 					  <div id="xemdiem" class="collapse">
 							 <table class="table table-striped">
 								    <thead>
