--- a/WebsiteCaNhan4/chinhsuabaigianggiaovien.html
+++ b/WebsiteCaNhan4/chinhsuabaigianggiaovien.html
@@ -108,42 +108,45 @@
 				<div class=" container">
 						<div class="col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2  table-content">
 						<h2>Chỉnh sửa bài giảng</h2>
+						<br>
 						<form class="form-horizontal">
 							<div class="form-group">
-								<label class="col-sm-2 control-label">Tên bài giảng :</label>
-								<div class="col-sm-10">
+								<label class="col-sm-3 control-label">Tên bài giảng:</label>
+								<div class="col-sm-9">
 									<input class="form-control" id="ten-bai-giang" type="text" >
 								</div>
 							</div>
 
 
 							<div class="form-group">
-								<label class="col-sm-2 control-label">Mô tả:</label>
-								<div class="col-sm-10">
+								<label class="col-sm-3 control-label">Mô tả:</label>
+								<div class="col-sm-9">
 									<textarea class="form-control" id="ten-bai-giang" type="text" rows="3" ></textarea>
 								</div>
 							</div>
 
 
 							<div class="form-group">
-								<label class="col-sm-2 control-label">Mô tả bài tập</label>
-								<div class="col-sm-10">
-									<textarea class="form-control" id="ten-bai-giang" type="text" rows="3" ></textarea>
+								<label class="col-sm-3 control-label">Mô tả bài tập:</label>
+								<div class="col-sm-9">
+									<textarea class="form-control" id="ten-bai-giang" type="text" rows="5" ></textarea>
 								</div>
 							</div>
 							<div class = "form-group">
-								<label class="col-sm-2 control-label">Tải file bài tập: </label>
+								<label class="col-sm-3 control-label">Tải file bài tập: </label>
 								<input type = "file" id = "inputfile">
 							</div>
-							<button type="button"  style="margin:5px;" class="btn btn-success">Tạo bài thi trắc nghiệm</button>
+							<br>
+							<button type="button"  style="margin:10px;" class="btn btn-success">Tạo bài thi trắc nghiệm</button>
 							<div class = "form-group">
-								<label class="col-sm-2 control-label">Tải bài giảng : </label>
+								<label class="col-sm-3 control-label">Tải bài giảng : </label>
 								<input type = "file" id = "inputfile">
 							</div>
 							<div class = "form-group">
-								<label class="col-sm-2 control-label">Tải tài liệu : </label>
+								<label class="col-sm-3 control-label">Tải tài liệu : </label>
 								<input type = "file" id = "inputfile">
 							</div>
+							<br>
 							<button type="button" class="btn btn-info"> Lưu lại </button>
 							<button type="button" class="btn btn-danger"> Hủy</button>
 						</form>
@@ -151,9 +154,9 @@
 				</div>
 			</div>
 
-			
+
 			<!--End Divide Bodu->
-	
+
 		<!--End Content-->
 			<!--Footer-->
 			<div class="footer" class="row">
