chỉnh sửa header

--- a/WebsiteCaNhan4/Tichdangnhap.html
+++ b/WebsiteCaNhan4/Tichdangnhap.html
@@ -9,7 +9,7 @@
 	<!-- CSS Riêng -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="shortcut icon" href="img/icon.ico" />
-	
+
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700">
 	<script src="jquery/jquery-3.1.0.js"></script>
@@ -64,8 +64,8 @@
                                     </ul>
                                 </li>
                                 <li class=""><a href="#" class="main-menu"> Hộp thư </a></li>
-
-                                <li style="margin-left:5em" class=""><a href="#" class="main-menu"> Đăng Xuất </a></li>
+																<li style="margin-left:5em" class=""><a href="#" class="main-menu"> Đăng Nhập </a></li>
+                                <li class=""><a href="#" class="main-menu"> Đăng Xuất </a></li>
                                 <li class="button-search">
                                     <p class="main-menu"><i class="fa fa-search"></i></p>
                                 </li>
@@ -121,7 +121,7 @@
 					</a>
 				</div>
 			</div>
-			<!-- End Slider Image-->		
+			<!-- End Slider Image-->
 
 			<!--Chia Khung-->
 			<div class="container-fluid">
@@ -140,7 +140,7 @@
 											<div class="form-group">
 							                    <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Mật khẩu">
 											</div>
-											<span class="button-checkbox">											
+											<span class="button-checkbox">
 							                    <input type="checkbox" name="remember_me" id="remember_me" checked="checked" class="hidden">
 												<a href="" class="btn btn-link pull-right">Quên mật khẩu</a>
 											</span>
