update sinhvien cuoi
update sinhviencuoi

--- a/WebsiteCaNhan4/trangchu.html
+++ b/WebsiteCaNhan4/trangchu.html
@@ -408,11 +408,11 @@
 					<div class="footer" class="row">
 						<div class="container">
 						 <div id="contact" class="container-fluid bg-grey">
-						  <h2 class="text-center" style="font-size: 50; font-weight: bold; ">LIÊN HỆ</h2>
-						  <br>
+						 
 						  <div class="row">
 						    <div class="col-sm-5">
-						      <p>Nhóm 14, Sáng Thứ 3 Môn Lập trình Web </p>
+						      <h3>Lập trình Web Nhóm 14</h3>
+						      <br>
 						      <p><span class="glyphicon glyphicon-map-marker"></span> Võ Văn Ngân, Q.Thủ Đức, TP.HCM</p>
 						      <p><span class="glyphicon glyphicon-phone"></span>0909090909</p>
 						      <p><span class="glyphicon glyphicon-envelope"></span> pilu15051996@gmail.com</p>
