--- a/WebsiteCaNhan4/trangthongtincanhan.html
+++ b/WebsiteCaNhan4/trangthongtincanhan.html
@@ -242,8 +242,8 @@
 					<div class="footer" class="row">
 						<div class="container">
 							 <div id="contact" class="container-fluid bg-grey">
-						  <h2 class="text-center" style="font-size: 50; font-weight: bold; ">LIÊN HỆ</h2>
-						  <br>
+						   <h3>Lập trình Web Nhóm 14</h3>
+						      <br>
 						  <div class="row">
 						    <div class="col-sm-5">
 						      <p>Nhóm 14, Sáng Thứ 3 Môn Lập trình Web </p>
