--- a/WebsiteCaNhan4/trangchitietbaigiang.html
+++ b/WebsiteCaNhan4/trangchitietbaigiang.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700">
 	<script src="jquery/jquery-3.1.0.js"></script>
-	<script src="js/time.js"></script>
+	
 
 </head>
 
@@ -229,14 +229,11 @@
 							<input class="btn btn-info" type='button' id='hideshow2' value='Nộp Bài Tập'>
 
 							<div id='bai-trac-nghiem' class="hide">
-								<div class="panel panel-info">
+								<div class="row">
+	
+								<div class="col-md-8 panel panel-info">
 									<div class="panel-heading">Câu 1: ..............</div>
-									<div class="panel-body">
-										<div class="progress" width="20">
-										  <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-										    <h4 class="modal-title" id="myModalLabel"><p id="demo"></p>%</h4>
-										  </div>
-										</div>
+									<div class="panel-body">										
 										<div class="radio">
 											<label><input type="radio" name="optradio">A. </label>
 										</div>
@@ -249,10 +246,25 @@
 										<div class="radio ">
 											<label><input type="radio" name="optradio">D.</label>
 										</div>
+
 									</div>
 									<input class="btn btn-info" type='button' id='hideshow' value='Câu tiếp theo '>
 									<input class="btn btn-info" type='button' id='hideshow' value='Câu trước  '>
 									<input class="btn btn-info pull-right" type='button' id='hideshow' value='Nộp bài'>
+								</div>
+								<div class="col-md-3">
+									<div class="panel panel-default">
+										<div class="panel-heading">
+											<div class="panel-title danger">Thời gian còn lại</div>
+										</div>
+										<div class="panel-body">
+											<span id = "days"><strong style="color: red">00</strong> Ngày</span>
+											<span id = "hours"><strong style="color: red">00</strong> Giờ</span>
+											<span id = "minutes"><strong style="color: red">00</strong> Phút</span>
+											<span id = "seconds"><strong style="color: red">00</strong> Giây</span>
+										</div>
+									</div>
+								</div>
 								</div>
 							</div>
 								<div id='nop-bai-tap' class="hide">
@@ -275,14 +287,34 @@
 																<label class="sr-only" for="inputfile">File input</label>
 																<input type="file" id="inputfile">
 															</div>
-														</td>
+														</td>													
 
 													</tr>
 												</tbody>
 											</table>
+											 <!-- Drop Zone -->
+									          <h4>Kéo thả file vào ô dưới đây</h4>
+									          <div class="upload-drop-zone" id="drop-zone">
+									            Kéo thả file vào đây
+									          </div>
+
+									          <!-- Progress Bar -->
+									          <div class="progress">
+									            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+									              <span class="sr-only">60% Complete</span>
+									            </div>
+									          </div>
 
 
-											<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-send"></span> Nộp bài</button>
+										<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-send"></span> Nộp bài</button>
+											 <!-- Upload Finished -->
+								          <div class="js-upload-finished">
+								            <h3 style="color: blue">File đã nộp</h3>
+								            <div class="list-group">
+								              <a href="#" class="list-group-item list-group-item-success"><span class="badge alert-success pull-right">Success</span>BaiTap1.zar</a>
+								              <a href="#" class="list-group-item list-group-item-success"><span class="badge alert-success pull-right">Success</span>BaiTap2.zar</a>
+								            </div>
+								          </div>
 										</div>
 
 									</div>
@@ -407,8 +439,8 @@
 		<div class="footer" class="row">
 			<div class="container">
 				<div id="contact" class="container-fluid bg-grey">
-				  <h2 class="text-center" style="font-size: 50; font-weight: bold; ">LIÊN HỆ</h2>
-				  <br>
+				   <h3>Lập trình Web Nhóm 14</h3>
+						      <br>
 				  <div class="row">
 				    <div class="col-sm-5">
 				      <p>Nhóm 14, Sáng Thứ 3 Môn Lập trình Web </p>
@@ -450,6 +482,11 @@
 	<!-- Tích hợp JS của Bootstrap -->
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
+	<script>
+		countdown('10/19/2013',['days', 'hours', 'minutes', 'seconds'], function(){
+			console.log('done');
+		})
+	</script>
 </body>
 
 </html>
