--- a/WebsiteCaNhan4/tranghopthu.html
+++ b/WebsiteCaNhan4/tranghopthu.html
@@ -24,69 +24,84 @@
 <body>
     <div class="container">
         <!-- HEADER-->
-        <header>
-            <div class="header-topbar">
-                <div class="container">
-                    <div class="topbar-left pull-left">
-                        <div class="email"><a href=""><i class="topbar-icon fa fa-envelope-o"></i><span>LTW Sáng T3</span></a></div>
-                        <div class="hotline"><a href=""><i class="topbar-icon fa fa-phone"></i><span>0909090909</span></a></div>
-                    </div>
-                    <div class="topbar-right pull-right">
-                        <div class="socials">
-                            <a href="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.youtube.com/" class="youtube"><i class="fa fa-youtube"></i></a>
-                        </div>
-                        <div class="group-sign-in">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="header-main homepage-01">
-                <div class="container">
-                    <div class="header-main-wrapper">
-                        <div class="navbar-header">
-                            <div class="logo pull-left">
-                                <a href="trangchu.html" class="header-logo"><img src="img/logo.png" alt="" /></a>
-                            </div>
-                            <button type="button" data-toggle="collapse" data-target=".navigation" class="navbar-toggle edugate-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                        </div>
-                        <nav class="navigation collapse navbar-collapse pull-right">
-                            <ul class="nav-links nav navbar-nav">
-                                <li class="active"><a href="#" class="main-menu">Trang chủ </a> </li>
-                                <li class="dropdown">
-                                    <a href="#" class="main-menu data-toggle=" dropdown ""> Quản lý <span class="fa fa-angle-down icons-dropdown"></span></a>
-                                    <ul class="dropdown-menu edugate-dropdown-menu-1">
-                                        <li>
-                                            <a href="#" class="link-page">Danh sách khóa học</a>
-                                        </li>
-                                        <li>
-                                            <a href=="#" class="link-page">Danh sách bài giảng</a>
-                                        </li>
-                                        <li>
-                                            <a href=="#" class="link-page">Danh sách học viên</a>
-                                        </li>
-                                        <li>
-                                            <a href=="#" class="link-page">Thông báo</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class=""><a href="#" class="main-menu"> Hộp thư </a></li>
+           <header>
+    <div class="header-topbar" style="background-color: #195690;">
+        <div class="container">
+          <div class="topbar-left pull-left">
+            <div class="email" ><a href="" ><i class="topbar-icon fa fa-envelope-o" ></i><span style="color: white">LTW Sáng T3</span></a></div>
+            <div class="hotline"><a href="" ><i class="topbar-icon fa fa-phone"></i><span style="color: white">0909090909</span></a></div>
 
-                                <li style="margin-left:5em" class=""><a href="#" class="main-menu"> Đăng Xuất </a></li>
-                                <li class="button-search">
-                                    <p class="main-menu"><i class="fa fa-search"></i></p>
-                                </li>
-                                <div class="nav-search  hide">
-                                    <form><input type="text" placeholder="Tìm kiếm" class="searchbox" />
-                                        <button type="submit" class="searchbutton fa fa-search"></button>
-                                    </form>
-                                </div>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
+          </div>
+
+
+          <div class="topbar-right pull-right" >
+            <div class="socials">
+              <a href="https://www.facebook.com/" class="facebook" ><i class="fa fa-facebook"></i></a>
+              <a href="https://www.youtube.com/" class="youtube" ><i class="fa fa-youtube"></i></a>
             </div>
-        </header>
+            <div class="group-sign-in">
+
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+<div id="top-nav" class="navbar navbar-inverse navbar-static-top" style="padding-right: 30px;background-color: white">
+   
+
+    <div class="navbar-header">
+      <div class="logo pull-left">
+                <a href="trangchu.html" class="header-logo"><img src="img/logo.png" style = "width: 160px" alt="" /></a>
+              </div>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">      
+      <form class="navbar-form navbar-left" method="GET" role="search">
+        <div class="form-group">
+          <input type="text" name="q" class="form-control" placeholder="Tìm kiếm">
+        </div>
+        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+      </form>
+       <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
+                    class="glyphicon glyphicon-comment" style = "color: #ffa500"></span>Thảo luận<span class="label label-primary">42</span>
+                </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#"><span class="label label-warning">7:00 AM</span>Chào, Thầy!</a></li>
+                        <li><a href="#"><span class="label label-warning">8:00 AM</span>Cho e hỏi JSP Servlet là gì ạ?</a></li>
+                        <li><a href="#"><span class="label label-warning">9:00 AM</span>Để thiết kế được trang web thì mình học gì ạ?</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#" class="text-center">Xem tất cả</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
+                    class="glyphicon glyphicon-envelope" style = "color:#f08080"></span>Hộp thư <span class="label label-info">32</span>
+                </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#"><span class="label label-warning">4:00 AM</span>Trần Thị Thơm gửi thư...</a></li>
+                        <li><a href="#"><span class="label label-warning">4:30 AM</span>Huỳnh Nhật Thành gửi thư ...</a></li>
+                        <li><a href="#"><span class="label label-warning">5:00 AM</span>Trường Giang gửi thư...</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#" class="text-center">Xem tất cả</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
+                    class="glyphicon glyphicon-user" style = "color:#4169e1"></span>Giảng viên<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span>Cá nhân</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-cog"></span>Cài đặt</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-off"></span>Đăng xuất</a></li>
+                    </ul>
+                </li>
+            </ul>
+      </div><!-- /.navbar-collapse -->
+
+  </div><!-- /container -->
+
+</header>
         <!-- End Header -->
         <!--Content-->
         <div class="container-fluid">
