--- a/WebsiteCaNhan4/Danhsachhocvien.html
+++ b/WebsiteCaNhan4/Danhsachhocvien.html
@@ -121,9 +121,14 @@
         <div>
             <h2 style=" font-weight: bold;color: blue">DANH SÁCH HỌC VIÊN</h2>
             <hr>
-
-        </div>
-        <div class="table-responsive">
+        </div>        
+        <div class="table-responsive">       
+             <form class="navbar-form navbar-right" method="GET" role="search">
+                <div class="form-group">
+                  <input type="text" name="q" class="form-control" placeholder="Tìm kiếm">
+                </div>
+                <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+              </form>    
             <table id="mytable" class="table table-bordred table-striped">
                 <thead>
                     <th>Họ và tên</th>
