--- a/WebsiteCaNhan4/test.html
+++ b/WebsiteCaNhan4/test.html
@@ -8,51 +8,40 @@
   <!-- Tích hợp bộ CSS của Booststrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- CSS Riêng -->
-  <link rel="stylesheet" type="text/css" href="css/teacher.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="shortcut icon" href="img/icon.ico" />
   <!--  Responsive-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Dong Ho -->
   <link href="css/datepicker.css" rel="stylesheet">
   <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/datepicker.js"></script>
-  <script src="js/trangchuGV.js"></script>
+  <script src="js/exituser.js"></script>
+  <script src="js/trangthongbao.js"></script>
+
   <!-- End DongHo -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700">
   <script src="jquery/jquery-3.1.0.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function() {
-
-      $(window).scroll(function() {
-        var topmenu = $(".header-topbar").height();
-        if ($(window).scrollTop() >= topmenu) {
-          $('.header-main.homepage-01').addClass('fixed-header');
-        } else {
-          $('.header-main.homepage-01').removeClass('fixed-header');
-        }
-      });
-
-    });
-  </script>
+  
 </head>
 
 <body>
   <div class="container">
-   <!-- Header -->
-    <div class="header-topbar" style="background-color: #195690;padding: 5px">
+    <!-- HEADER-->
+    <header>
+      <div class="header-topbar">
         <div class="container">
           <div class="topbar-left pull-left">
-            <div class="email" ><a href="" style="margin-right: 10px;color: white"><i class="topbar-icon fa fa-envelope-o" ></i><span style="color: white">LTW Sáng T3</span></a></div>
-            <div class="hotline"><a href="" style="margin-right: 10px;color: white"><i class="topbar-icon fa fa-phone"></i><span style="color: white">0909090909</span></a></div>
+            <div class="email"><a href=""><i class="topbar-icon fa fa-envelope-o"></i><span>LTW Sáng T3</span></a></div>
+            <div class="hotline"><a href=""><i class="topbar-icon fa fa-phone"></i><span>0909090909</span></a></div>
 
           </div>
 
 
-          <div class="topbar-right pull-right" style="padding: 5px">
+          <div class="topbar-right pull-right">
             <div class="socials">
-              <a href="https://www.facebook.com/" class="facebook" style="margin-right: 30px;color: white"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.youtube.com/" class="youtube" style="margin-right: 30px;color:white"><i class="fa fa-youtube"></i></a>
+              <a href="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.youtube.com/" class="youtube"><i class="fa fa-youtube"></i></a>
             </div>
             <div class="group-sign-in">
 
@@ -62,163 +51,171 @@
 
         </div>
       </div>
-<div id="top-nav" class="navbar navbar-inverse navbar-static-top" style="padding-right: 30px;background-color: white">
-   
 
-    <div class="navbar-header">
-      <div class="logo pull-left">
-                <a href="trangchu.html" class="header-logo"><img src="img/logo.png" style = "width: 160px" alt="" /></a>
+      <div class="header-main homepage-01">
+        <div class="container">
+          <div class="header-main-wrapper">
+            <div class="navbar-header">
+              <div class="logo pull-left">
+                <a href="trangchu.html" class="header-logo"><img src="img/logo.png" alt="" /></a>
               </div>
-    </div>
+              <button type="button" data-toggle="collapse" data-target=".navigation" class="navbar-toggle edugate-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+            </div>
+             <div class="col-sm-3 col-md-3">
+                  <form class="navbar-form" role="search">
+                  <div class="input-group">
+                      <input type="text" class="form-control" placeholder="Search" name="q">
+                      <div class="input-group-btn">
+                          <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                      </div>
+                  </div>
+                  </form>
+              </div>
+            <nav class="navigation collapse navbar-collapse pull-right">
+              <ul class="nav-links nav navbar-nav">
+                
+                <li class="active"><a href="#" class="main-menu">Trang chủ </a> </li>
+                <li class="dropdown">
+                  <a href="#" class="main-menu data-toggle=" dropdown "">Các khóa học <span class="fa fa-angle-down icons-dropdown"></span></a>
+                  <ul class="dropdown-menu edugate-dropdown-menu-1">
+                    <li>
+                      <a href="#" class="link-page">Android</a>
+                    </li>
+                    <li>
+                      <a href=="#" class="link-page">Java</a>
+                    </li>
+                    <li>
+                      <a href=="#" class="link-page">Java</a>
+                    </li>
+                    <li>
+                      <a href=="#" class="link-page">Lập trình web</a>
+                    </li>
+                  </ul>
+                </li>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">      
-      <form class="navbar-form navbar-left" method="GET" role="search">
-        <div class="form-group">
-          <input type="text" name="q" class="form-control" placeholder="Tìm kiếm">
+                <li class=""><a href="#" class="main-menu">Liên hệ </a></li>
+                <li class="dropdown" >
+                             <a href="#" class="glyphicon glyphicon-bell" id = "thongbao"></a>
+                           </li>  
+                          <li class="dropdown pull-right" id = "user">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Chào, Pé Dứa <span class="glyphicon glyphicon-user text-center"></span></a>
+                      <ul class="dropdown-menu">  
+                         <li><a href="#">Tin nhắn<span class="badge pull-right"> 42 </span></a></li>
+                        <li class="divider"></li>                     
+                        <li><a href="#">Hồ sơ của bạn<span class="glyphicon glyphicon-user pull-right"></span></a></li>
+                        <li class="divider"></li>                      
+                        <li><a href="#">Cài đặt<span class="glyphicon glyphicon-cog pull-right"></span></a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Trợ giúp <span class="glyphicon glyphicon-flag pull-right"></span></a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Đăng xuất <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
+                      </ul>
+                    </li>
+              </ul>
+            </nav>
+          </div>
         </div>
-        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
-      </form>
-       <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
-                    class="glyphicon glyphicon-comment" style = "color: #ffa500"></span>Thảo luận<span class="label label-primary">42</span>
-                </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><span class="label label-warning">7:00 AM</span>Chào, Thầy!</a></li>
-                        <li><a href="#"><span class="label label-warning">8:00 AM</span>Cho e hỏi JSP Servlet là gì ạ?</a></li>
-                        <li><a href="#"><span class="label label-warning">9:00 AM</span>Để thiết kế được trang web thì mình học gì ạ?</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#" class="text-center">Xem tất cả</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
-                    class="glyphicon glyphicon-envelope" style = "color:#f08080"></span>Hộp thư <span class="label label-info">32</span>
-                </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><span class="label label-warning">4:00 AM</span>Trần Thị Thơm gửi thư...</a></li>
-                        <li><a href="#"><span class="label label-warning">4:30 AM</span>Huỳnh Nhật Thành gửi thư ...</a></li>
-                        <li><a href="#"><span class="label label-warning">5:00 AM</span>Trường Giang gửi thư...</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#" class="text-center">Xem tất cả</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span
-                    class="glyphicon glyphicon-user" style = "color:#4169e1"></span>Giảng viên<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span>Cá nhân</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-cog"></span>Cài đặt</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-off"></span>Đăng xuất</a></li>
-                    </ul>
-                </li>
-            </ul>
-      </div><!-- /.navbar-collapse -->
-
-  </div><!-- /container -->
-</div>
-<!-- /Header -->
-
-<!-- Main -->
-<div class="container">
-
-<div class="row">
-    <div class="col-md-3">
-     <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#"><i class="fa fa-home fa-fw"></i>Home</a></li>
-                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-list-alt fa-fw"></i>Widgets</a></li>
-                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-file-o fa-fw"></i>Pages</a></li>
-                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-bar-chart-o fa-fw"></i>Charts</a></li>
-                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-table fa-fw"></i>Table</a></li>
-                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-tasks fa-fw"></i>Forms</a></li>
-                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-calendar fa-fw"></i>Calender</a></li>
-                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-book fa-fw"></i>Library</a></li>
-                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-pencil fa-fw"></i>Applications</a></li>
-                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-cogs fa-fw"></i>Settings</a></li>
-            </ul>
-     
-
-      <hr>
-    </div><!-- /col-3 -->
-    <div class="col-md-9">
-      <div class="row">
-        <div class="col-md-9">
-            <div class="input-group">
-            <div class="input-group-btn search-panel">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                <span id="search_concept">Tên</span> <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                    <li><a href="#ten"><i class="fa fa-angle-double-right"></i> Họ và Tên</a></li>
-                    <li><a href="#email"><i class="fa fa-angle-double-right"></i> Email</a></li>
-                    <li><a href="#sodienthoai"><i class="fa fa-angle-double-right"></i> Số điện thoại</a></li>
-                </ul>
-            </div>
-            <input type="hidden" name="search_param" value="name" id="search_param">         
-            <input type="text" class="form-control" name="q" placeholder="Tìm kiếm" id="search_key" value="">
-            <span class="input-group-btn">
-                    <a class="btn btn-default text-muted" href="#" title="Clear"><i class="glyphicon glyphicon-remove"></i> </a>
-                    <button class="btn btn-info" type="submit">  Tìm kiếm </button>
-            </span>
-            </div>
-        </div>
-      <!-- <div class="col-md-3"> <a href="trangthemhocvien.html" class="btn btn-primary btn-xs pull-right"><b>+</b> Thêm học viên</a></div> -->
-      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Click</button>
-
-
-       <div id="myModal" class="modal fade" role="dialog">
-             <div class="modal-dialog">
-                        <div class="modal-content">
-                                   <div class="modal-header">
-                                         <button type="button" class="close" data-dismiss="modal">×</button>
-                                         <h4 class="modal-title">Error!!</h4>
-                                   </div>
-                                   <div class="modal-body">
-                                         <p>Sorry your server request has been declined</p>
-                                   </div>
-                                   <div class="modal-footer">
-                                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                   </div>
-                        </div>
-
-            </div>
-     </div>
-    </div>
-    <table class="table table-striped custab">
-    <thead>
-   
-        <tr>
-            <th>Họ Và Tên</th>
-            <th>Email</th>
-            <th>Số điện thoại</th>
-            <th>Khóa học đã đăng ký</th>
-            <th class="text-center">Thay đổi</th>
-        </tr>
-    </thead>
-            <tr>
-                <td>Trần Thị Thơm</td>
-                <td>pilu15051996@gmail.com</td>
-                <td>01689445246</td>
-                <td>Lập trình web</td>
-                <td class="text-center"><a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Sửa</a> <a href="#" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Xóa</a></td>
-            </tr>
-            <tr>
-                <td>Huỳnh Nhật Thành</td>
-                <td>nhatthanh1503@gmail.com</td>
-                <td>01635882964</td>
-                <td>Thiết kế Web</td>
-                <td class="text-center"><a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Sửa</a> <a href="#" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Xóa</a></td>
-            </tr>
-            <tr>
-                <td>Phạm Lê Minh</td>
-                <td>ltminh145232@gmail.com</td>
-                <td>09524775123</td>
-                <td>Nhập môn lập trình</td>
-                <td class="text-center"><a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Sửa</a> <a href="#" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Xóa</a></td>
-            </tr>
-    </table> 
-  
       </div>
-  
+    </header>
+    <!-- End Header -->
+    <!--Content-->
+    <div class="content">
+
+    <!--Devide Body-->
+    <div class="content-body">
+      <div class="container">
+          <div class="row">
+    <div class="col-md-6">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Thông báo 1</h3>
+          <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
+        <div class="panel-body">Thông báo mở khóa học mới ngày 26/8/2016 về lập trình JSP Servlet ...</div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <h3 class="panel-title">Thông báo 2</h3>
+          <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
+        <div class="panel-body">Thông báo mở khóa học mới ngày 26/8/2016 về lập trình JSP Servlet ...</div>
+    </div>
+  </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">Thông báo 3</h3>
+          <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
+        <div class="panel-body">Thông báo mở khóa học mới ngày 26/8/2016 về lập trình JSP Servlet ...</div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="panel panel-warning">
+        <div class="panel-heading">
+          <h3 class="panel-title">Thông báo 4</h3>
+          <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+        </div>
+        <div class="panel-body">Thông báo mở khóa học mới ngày 26/8/2016 về lập trình JSP Servlet ...</div>
+      </div>
+    </div>
+  </div>
+          </div>
+    </div>
+</div>
+
+
+
+<div class="footer" class="row">
+  <div class="container">
+     <div id="contact" class="container-fluid bg-grey">
+     <h3>Lập trình Web Nhóm 14</h3>
+        <br>
+    <div class="row">
+      <div class="col-sm-5">
+        <p>Nhóm 14, Sáng Thứ 3 Môn Lập trình Web </p>
+        <p><span class="glyphicon glyphicon-map-marker"></span> Võ Văn Ngân, Q.Thủ Đức, TP.HCM</p>
+        <p><span class="glyphicon glyphicon-phone"></span>0909090909</p>
+        <p><span class="glyphicon glyphicon-envelope"></span> pilu15051996@gmail.com</p>
+      </div>
+      <div class="col-sm-7 slideanim">
+        <div class="row">
+          <div class="col-sm-6 form-group">
+            <input class="form-control" id="name" name="name" placeholder="Tên" type="text" required>
+          </div>
+          <div class="col-sm-6 form-group">
+            <input class="form-control" id="email" name="email" placeholder="Địa chỉ email" type="email" required>
+          </div>
+        </div>
+        <textarea class="form-control" id="comments" name="comments" placeholder="Nội dung" rows="5"></textarea><br>
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <button class="btn btn-default pull-right" type="submit">Gởi</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <img id="googleMap" style="height:auto;width:100%;" src = "img/map.PNG" alt = "">
+    <div class="col-md-12 text-center">
+      <img style="width:40px; height:40px;padding: 5px" src="img/logo.jpg"> &copy 2016 - BẢN QUYỀN THUỘC VỀ NHÓM 14 LTW
+    </div>
+
+  </div>
+</div>
+<!-- End Footer-->
+</div>
+<img id="back-to-top" src="img/back-to-top.png">
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Tích hợp JS của Bootstrap -->
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 
 </html>
