--- a/WebsiteCaNhan4/trangkhoahocGV.html
+++ b/WebsiteCaNhan4/trangkhoahocGV.html
@@ -126,7 +126,7 @@
   <div class="row">
     <div class="col-md-3">
      <ul class="nav nav-pills nav-stacked">
-        <li class="active"><a href="#"><i class="fa fa-home fa-fw"></i>Trang chủ</a></li>
+        <li class="active"><a href="trangchuGV.html"><i class="fa fa-home fa-fw"></i>Trang chủ</a></li>
                 <li><a href="trangkhoahocGV.html"><i class="fa fa-list-alt fa-fw"></i>Khóa học</a></li>
                 <li><a href="trangkhoahocGV.html"><i class="fa fa-file-o fa-fw"></i>Tài liệu</a></li>          
                 <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-book fa-fw"></i>Bài tập</a></li>
@@ -249,6 +249,26 @@
                 </div>
                 <div class="form-group">
                   <label for="mota">Mô tả khóa học</label>
+                 <div class="btn-toolbar">
+  <div class="btn-group">
+      <button class="btn" data-original-title="Bold - Ctrl+B"><i class="fa fa-bold"></i></button>
+      <button class="btn" data-original-title="Italic - Ctrl+I"><i class="fa fa-italic"></i></button>
+      <button class="btn" data-original-title="List"><i class="fa fa-list"></i></button>
+      <button class="btn" data-original-title="Img"><i class="fa fa-picture-o"></i></button>
+      <button class="btn" data-original-title="URL"><i class="fa fa-arrow-right"></i></button>
+  </div>
+  <div class="btn-group">
+      <button class="btn" data-original-title="Align Right"><i class="fa fa-align-right"></i></button>
+      <button class="btn" data-original-title="Align Center"><i class="fa fa-align-center"></i></button>
+      <button class="btn" data-original-title="Align Left"><i class="fa fa-align-left"></i></button>
+  </div>
+  <div class="btn-group">
+      <button class="btn" data-original-title="Preview"><i class="fa fa-eye"></i></button>
+      <button class="btn" data-original-title="Save"><i class="fa fa-check"></i></button>
+      <button class="btn" data-original-title="Cancel"><i class="fa fa-trash"></i></button>
+  </div>
+</div>
+                    <br>
                   <textarea class="form-control" rows="5" id="mota"></textarea>
                 </div>
                 <button type="button" class="btn btn-success">Lưu</button>
