--- a/WebsiteCaNhan4/trangchuGV.html
+++ b/WebsiteCaNhan4/trangchuGV.html
@@ -1192,11 +1192,13 @@
 
 
         </div>
+
 </div>
 </div>
      
 
-
+      
+          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Tích hợp JS của Bootstrap -->
