--- a/WebsiteCaNhan4/trangchuGV.html
+++ b/WebsiteCaNhan4/trangchuGV.html
@@ -418,7 +418,7 @@
                     <div class="modal-body">
                         <div class="form-group">
                           <label for="usr">Tên tài liệu:</label>
-                          <input type="text" class="form-control" id="usr">
+                          <input type="text" class="form-control input-sm" id="usr"  placeholder="Nhập tên tài liệu">
                         </div>
                         <form action="" method="post" enctype="multipart/form-data" id="js-upload-form">
                           <div class="form-inline">
