--- a/WebsiteCaNhan4/trangkhoahocGV.html
+++ b/WebsiteCaNhan4/trangkhoahocGV.html
@@ -246,28 +246,29 @@
                 <div class="form-group">
                   <label for="tieude">Tiêu đề: </label>
                   <input type="text" class="form-control" id="tieude">
+                  <span class="help-block">Vui lòng nhập tiêu đề chính nổi bật </span>
                 </div>
                 <div class="form-group">
                   <label for="mota">Mô tả khóa học</label>
                  <div class="btn-toolbar">
-  <div class="btn-group">
-      <button class="btn" data-original-title="Bold - Ctrl+B"><i class="fa fa-bold"></i></button>
-      <button class="btn" data-original-title="Italic - Ctrl+I"><i class="fa fa-italic"></i></button>
-      <button class="btn" data-original-title="List"><i class="fa fa-list"></i></button>
-      <button class="btn" data-original-title="Img"><i class="fa fa-picture-o"></i></button>
-      <button class="btn" data-original-title="URL"><i class="fa fa-arrow-right"></i></button>
-  </div>
-  <div class="btn-group">
-      <button class="btn" data-original-title="Align Right"><i class="fa fa-align-right"></i></button>
-      <button class="btn" data-original-title="Align Center"><i class="fa fa-align-center"></i></button>
-      <button class="btn" data-original-title="Align Left"><i class="fa fa-align-left"></i></button>
-  </div>
-  <div class="btn-group">
-      <button class="btn" data-original-title="Preview"><i class="fa fa-eye"></i></button>
-      <button class="btn" data-original-title="Save"><i class="fa fa-check"></i></button>
-      <button class="btn" data-original-title="Cancel"><i class="fa fa-trash"></i></button>
-  </div>
-</div>
+                      <div class="btn-group">
+                          <button class="btn" data-original-title="Bold - Ctrl+B"><i class="fa fa-bold"></i></button>
+                          <button class="btn" data-original-title="Italic - Ctrl+I"><i class="fa fa-italic"></i></button>
+                          <button class="btn" data-original-title="List"><i class="fa fa-list"></i></button>
+                          <button class="btn" data-original-title="Img"><i class="fa fa-picture-o"></i></button>
+                          <button class="btn" data-original-title="URL"><i class="fa fa-arrow-right"></i></button>
+                      </div>
+                      <div class="btn-group">
+                          <button class="btn" data-original-title="Align Right"><i class="fa fa-align-right"></i></button>
+                          <button class="btn" data-original-title="Align Center"><i class="fa fa-align-center"></i></button>
+                          <button class="btn" data-original-title="Align Left"><i class="fa fa-align-left"></i></button>
+                      </div>
+                      <div class="btn-group">
+                          <button class="btn" data-original-title="Preview"><i class="fa fa-eye"></i></button>
+                          <button class="btn" data-original-title="Save"><i class="fa fa-check"></i></button>
+                          <button class="btn" data-original-title="Cancel"><i class="fa fa-trash"></i></button>
+                      </div>
+                    </div>
                     <br>
                   <textarea class="form-control" rows="5" id="mota"></textarea>
                 </div>
