--- a/WebsiteCaNhan4/trangchinhsuathongtincanhan.html
+++ b/WebsiteCaNhan4/trangchinhsuathongtincanhan.html
@@ -134,7 +134,7 @@
 
                                 <!-- Text input-->
 
-                            <div class="form-group">
+                            <div class="form-group has-success has-feedback">
                               <label class="col-md-4 control-label" for="Name (Full name)">Tên</label>  
                               <div class="col-md-4">
                              <div class="input-group">
