--- a/WebsiteCaNhan4/trangkhoahocGV.html
+++ b/WebsiteCaNhan4/trangkhoahocGV.html
@@ -244,12 +244,12 @@
             </div>
             <div class="panel-body">
                 <div class="form-group">
-                  <label for="tieude">Tiêu đề: </label>
-                  <input type="text" class="form-control" id="tieude">
+                  <label for="contactHeading">Tiêu đề: </label>
+                  <input type="text" class="form-control" id="contactHeading">
                   <span class="help-block">Vui lòng nhập tiêu đề chính nổi bật </span>
                 </div>
                 <div class="form-group">
-                  <label for="mota">Mô tả khóa học</label>
+                  <label for="contactND">Mô tả khóa học</label>
                  <div class="btn-toolbar">
                       <div class="btn-group">
                           <button class="btn" data-original-title="Bold - Ctrl+B"><i class="fa fa-bold"></i></button>
@@ -270,9 +270,9 @@
                       </div>
                     </div>
                     <br>
-                  <textarea class="form-control" rows="5" id="mota"></textarea>
+                  <textarea class="form-control" rows="5" id="contactND"></textarea>
                 </div>
-                <button type="button" class="btn btn-success">Lưu</button>
+                <button type="button" class="btn btn-success" id = "contactbtn">Lưu</button>
                  <button type="button" class="btn btn-default">Hủy</button>
             </div>
         </div>
@@ -290,6 +290,33 @@
 
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/css/bootstrapValidator.min.css"/>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
+
+    <script>
+      
+    function validateText(id)
+    {
+      
+      if($("#"+id).val() == null || $("#"+id).val() == "")
+      {
+        var div = $("#"+id).closest("div");
+        div.addClass("has-error");
+        return false;
+      }
+
+    }
+
+      $(document).ready(
+        function()
+        {
+          $("#contactbtn").click(function()
+          {
+            validateText("contactHeading");
+
+          });
+        }
+
+        );
+    </script>
 
 </body>
 
