--- a/WebsiteCaNhan4/tranghopthu.html
+++ b/WebsiteCaNhan4/tranghopthu.html
@@ -106,7 +106,18 @@
         <!--Content-->
         <div class="container-fluid">
 				<div class="row vdivide">
-					<div class="col-md-12">
+					 <div class="col-md-3">
+						     <ul class="nav nav-pills nav-stacked">
+						        <li class="active"><a href="trangchuGV.html"><i class="fa fa-home fa-fw"></i>Trang chủ</a></li>
+						                <li><a href="trangkhoahocGV.html"><i class="fa fa-list-alt fa-fw"></i>Khóa học</a></li>
+						                <li><a href="trangkhoahocGV.html"><i class="fa fa-file-o fa-fw"></i>Tài liệu</a></li>          
+						                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-book fa-fw"></i>Bài tập</a></li>
+						                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-tasks fa-fw"></i>Bài tập trắc nghiệm</a></li>    
+						                <li><a href="http://www.jquery2dotnet.com"><i class="fa fa-cogs fa-fw"></i>Cài đặt</a></li>
+						      </ul>
+						   
+						    </div>
+					<div class="col-md-9">
 						<nav class="navbar navbar-static-top" role="navigation">
 							<div class="containerinbox">
 								<ul class="nav navbar-nav">
