--- a/WebsiteCaNhan4/trangthongbao.html
+++ b/WebsiteCaNhan4/trangthongbao.html
@@ -196,8 +196,10 @@
                     </div>
     					    </div>
                 </form>
+                <div class="col-sm-offset-2 col-sm-10">
                  <button type="button" class="btn btn-success">Lưu</button>
                  <a href="" class="primary">Hủy</a>
+                 </div>
 			   		</div>
 			   </div>
 			  </div>
